--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,5 +3,19 @@
 
     <string name="app_name">Gear Shift</string>
     <string name="title_torrent_detail">Torrent Detail</string>
+    
+    <string name="filter_header">Filters</string>
+    <string name="filter_all">All</string>
+    <string name="filter_downloading">Downloading</string>
+    <string name="filter_seeding">Seeding</string>
+    <string name="filter_paused">Paused</string>
+    <string name="filter_complete">Complete</string>
+    <string name="filter_incomplete">Incomplete</string>
+    <string name="filter_active">Active</string>
+    <string name="filter_checking">Checking</string>
+    
+    <string name="status">Status</string>
+    <string name="speed_format">Down: {0}/{1} {2}\nUp: {3}/{4} {5}</string>
+    <string name="free_space_format">Free Space: {0} {1}</string>
 
 </resources>
