--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,10 +3,7 @@
 
     <string name="app_name">Gear Shift</string>
     <string name="title_torrent_detail">Torrent Detail</string>
-    
-    <string name="ok">Ok</string>
-    <string name="cancel">Cancel</string>
-    
+        
     <string name="filter_header">Filters</string>
     <string name="filter_all">All</string>
     <string name="filter_downloading">Downloading</string>
@@ -25,6 +22,7 @@
     <string name="alt_speed_label_on">Alternate speed limit on</string>
     <string name="alt_speed_label_off">Alternate speed limit off</string>
     <string name="alt_speed">Alternate speed limit</string>
+    <string name="settings">Settings</string>
 
     <string name="torrent_overview">Overview</string>
     <string name="torrent_limits">Limits</string>
@@ -63,4 +61,6 @@
     <string name="torrent_peers">Peers</string>
     <string name="torrent_peer_limit">Peer limit:</string>
     
+    <string name="header_label_general_preferences">General</string>
+    <string name="header_label_profiles">Profiles</string>
 </resources>
