--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,6 +4,8 @@
     <string name="app_name">Gear Shift</string>
     <string name="title_torrent_detail">Torrent Detail</string>
     
+    <string name="empty_string"></string>
+    
     <string name="number_dialog_delete">Delete a digit</string>
         
     <string name="filter_header">Filters</string>
