--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,6 +5,8 @@
     <string name="title_torrent_detail">Torrent Detail</string>
     
     <string name="empty_string"></string>
+    <string name="done">Done</string>
+    <string name="delete">Delete</string>
     
     <string name="number_dialog_delete">Delete a digit</string>
         
