--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -100,4 +100,8 @@
     <string name="con_timeout">Timeout</string>
     <string name="con_timeout_default">40</string>
     <string name="con_retries">Retry</string>
+    
+    <string name="invalid_input_title">Invalid Input</string>
+    <string name="con_name_cannot_be_empty">The profile name cannot be empty</string>
+    <string name="con_host_cannot_be_empty">The host cannot be empty</string>
 </resources>
