add a spinner to the list fragment for choosing the profile

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -109,4 +109,7 @@
     <string name="invalid_input_title">Invalid Input</string>
     <string name="con_name_cannot_be_empty">The profile name cannot be empty</string>
     <string name="con_host_cannot_be_empty">The host cannot be empty</string>
+    
+    <string name="no_profiles">No profiles</string>
+    <string name="create_profile_in_settings">Create a new profile in the settings</string>
 </resources>
