--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -113,6 +113,9 @@
     <string name="no_profiles">No profiles</string>
     <string name="create_profile_in_settings">Create a new profile in the settings</string>
     
+    <string name="no_profiles_empty_list">&lt;h2&gt;No profile seems to have been created yet.&lt;/h2&gt;You should add one by visiting the &lt;i&gt;settings&lt;/i&gt;.</string>
+    <string name="no_torrents_empty_list">&lt;h2&gt;We got through!&lt;/h2&gt;You just have to add some torrents now.</string>
+    
     <string name="traffic_downloading_format">{0} of {1} ({2}) - {3}</string>
     <string name="traffic_uploading_format">{0}, uploaded {1} ({2}) {3}</string>
     <string name="traffic_uploading_ratio_format">Ratio: {0} {1}</string>
