--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -176,6 +176,7 @@
     <string name="set_location">Set location</string>
     
     <string name="add_magnet">New magnet link</string>
+    <string name="add_torrent">New torrent</string>
     <string name="start_paused_checkbox">Start paused</string>
     
     <string name="no_tracker_errors">No errors</string>
