--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -80,7 +80,7 @@
     <string name="session_update_interval">Session update interval</string>
     <string name="torrents">Torrents</string>
     <string name="start_paused">Start paused</string>
-    <string name="delete_local_torrent_file">Delete local .torrent file after adding</string>
+    <string name="delete_local_torrent_file">Try to delete the local .torrent file after adding</string>
     
     <string name="profile">Profile</string>
     <string name="profile_summary_format">%1$s</string>
@@ -108,7 +108,7 @@
     <string name="create_profile_in_settings">Create a new profile in the settings</string>
     
     <string name="no_profiles_empty_list">&lt;h2&gt;No profile seems to have been created yet.&lt;/h2&gt;You should add one by visiting the &lt;i&gt;settings&lt;/i&gt;.</string>
-    <string name="no_torrents_empty_list">&lt;h2&gt;We got through!&lt;/h2&gt;You just have to add some torrents now.</string>
+    <string name="no_torrents_empty_list">&lt;h2&gt;You are connected!&lt;/h2&gt;The daemon doesn\'t manage any torrents at the moment.</string>
     <string name="no_filtered_torrents_empty_list">No torrents match the current filter</string>
     <string name="no_connectivity_empty_list">&lt;h2&gt;&lt;font color="#cc0000"&gt;You need an active network connection!&lt;/font&gt;&lt;/h2&gt;</string>
     <string name="access_denied_empty_list">&lt;h2&gt;&lt;font color="#cc0000"&gt;Access denied!&lt;/font&gt;&lt;/h2&gt;Your credentials might be incorrect, or your IP address might not be in the daemon\'s white list.</string>
