--- a/TODO
+++ b/TODO
@@ -1,3 +1,7 @@
 * Allow the files from a torrent to be prioritized
 * Allow to set which filters and sorters are available for selecting
 * Add directories filter
+* Save the current filter/sorter in the preferences
+
+
+* Add trackers and peers to the details fragment
