--- a/TODO
+++ b/TODO
@@ -1,3 +1,4 @@
+* Implement error handling in the detail fragment
 * Allow the files from a torrent to be prioritized
 * Allow to set which filters and sorters are available for selecting
 * Add directories filter
