--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -191,5 +191,5 @@
     <string name="about_name">Gear Shift</string>
     <string name="app_icon">App icon</string>
     <string name="about_description">Gear Shift is a Transmission remote client, created to provide a great experience when dealing with all aspects of torrent management.</string>
-    <string name="about_donation">This app is provided for free, without any annoying ads. If you find it useful, consider making a small <a href="http://google.com" >donation</a>.</string>
+    <string name="about_donation">This app is provided for free, without any annoying ads. If you find it useful, consider <![CDATA[<a href="https://www.paypal.com/bg/cgi-bin/webscr?cmd=_donations&business=support@sugr.org&lc=US&item_name=Gear Shift&no_note=1&no_shipping=1&currency_code=EUR">sending a beer ot two this way</a>]]>.</string>
 </resources>
