--- a/TODO
+++ b/TODO
@@ -4,6 +4,7 @@
 * Allow to set which filters and sorters are available for selecting
 * Add directories filter
 * Save the current filter/sorter in the preferences
+* "Select all" button to the CAB multiselects
 
 
 * Add trackers and peers to the details fragment
