add toast to the torrent list to handle torrent-add errors

--- a/TODO
+++ b/TODO
@@ -4,5 +4,6 @@
 * Allow to set which filters and sorters are available for selecting
 * Add directories filter
 * Save the current filter/sorter in the preferences
+* Show a small indicator on each torrent row that has tracker errors
 
 * Add trackers and peers to the details fragment
