--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -192,5 +192,9 @@
     <string name="app_icon">App icon</string>
     <string name="about_description">Gear Shift is a Transmission remote client, created to provide a great experience when dealing with all aspects of torrent management.</string>
     <string name="about_donation">This app is provided for free, without any annoying ads. If you find it useful, consider <![CDATA[<a href="https://www.paypal.com/bg/cgi-bin/webscr?cmd=_donations&business=support@sugr.org&lc=US&item_name=Gear Shift&no_note=1&no_shipping=1&currency_code=EUR">sending a beer ot two this way</a>]]>.</string>
+    
     <string name="ic_menu_select_all">Select All</string>
+    
+    <string name="duplicate_torrent">This torrent is already in the list.</string>
+    <string name="invalid_torrent">The torrent being added is invalid or corrupt.</string>
 </resources>
