save the action mode itself instead of a boolean flag

--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
-* Add Google Analytics to track crashes
+* Add session configuration fragment
 * Allow the files from a torrent to be prioritized
 * Allow to set which filters and sorters are available for selecting
 * Add directories filter
