--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -203,4 +203,33 @@
     <string name="menu_high_priority">High priority</string>
     <string name="menu_normal_priority">Normal priority</string>
     <string name="menu_low_priority">Low priority</string>
+
+    <string name="menu_filters_header">Filters</string>
+    <string name="menu_filters_all">All</string>
+    <string name="menu_filters_downloading">Downloading</string>
+    <string name="menu_filters_seeding">Seeding</string>
+    <string name="menu_filters_paused">Paused</string>
+    <string name="menu_filters_complete">Compete</string>
+    <string name="menu_filters_incomplete">Incomplete</string>
+    <string name="menu_filters_active">Active</string>
+    <string name="menu_filters_checking">Checking</string>
+
+    <string name="menu_sort_header">Sort By</string>
+    <string name="menu_sort_name">Name</string>
+    <string name="menu_sort_size">Size</string>
+    <string name="menu_sort_status">Status</string>
+    <string name="menu_sort_activity">Activity</string>
+    <string name="menu_sort_age">Age</string>
+    <string name="menu_sort_progress">Progress</string>
+    <string name="menu_sort_ratio">Ratio</string>
+    <string name="menu_sort_location">Location</string>
+    <string name="menu_sort_peers">Peers</string>
+    <string name="menu_sort_download_speed">Download speed</string>
+    <string name="menu_sort_upload_speed">Upload speed</string>
+    <string name="menu_sort_queue">queue</string>
+
+    <string name="menu_order_header">Order</string>
+    <string name="menu_order_descending">Descending</string>
+
+    <string name="menu_directories_header">Directories</string>
 </resources>
