refactoring of the side menu list items
supplementary filters by directory

--- a/TODO
+++ b/TODO
@@ -1,3 +1,4 @@
+* Add torrent-verify method
 * Add session configuration fragment
 * Allow to set which filters and sorters are available for selecting
 * Add directories filter
